changed all the headers

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,10 +11,10 @@
     <meta name="author" content="Themeland">
 
     <!-- Title  -->
-    <title>Buster  Solutions | Best NFT Development Agency</title>
+    <title>Buster Apps | Best NFT Development Agency</title>
 
     <!-- Favicon  -->
-    <link rel="icon" href="assets/img/welcome/buster.jpg">
+    <link rel="icon" href="assets/img/welcome/busterapps.png">
 
     <!-- ***** All CSS Files ***** -->
 
@@ -51,7 +51,7 @@
                     <span data-text-preloader="R" class="animated-letters">R</span>
                    
                 </div>
-                <p class="fw-5 text-center text-uppercase">Solutions</p>
+                <p class="fw-5 text-center text-uppercase">Apps</p>
             </div>
             <!-- Loader Animation -->
             <div class="loader-animation">
@@ -239,8 +239,8 @@
             <div class="container header">
                 <!-- Navbar Brand-->
                 <a class="navbar-brand" href="/"  >
-                    <img  class="navbar-brand-regular" height="70px" width="130px"  src="assets/img/welcome/busterapp2.png" alt="brand-logo">
-                    <img class="navbar-brand-sticky"  height="70px" width="130px"  src="assets/img/welcome/busterapp2.png"alt="sticky brand-logo">
+                    <img  class="navbar-brand-regular" height="80px" width="160px"  src="assets/img/welcome/busterapp2.png" alt="brand-logo">
+                    <img class="navbar-brand-sticky"  height="80px" width="160px"  src="assets/img/welcome/busterapp2.png"alt="sticky brand-logo">
                 </a>
                 <div class="ml-auto"></div>
                 <!-- Navbar -->
@@ -341,7 +341,7 @@
                 <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">contact@example.com</a></i>
                 <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
               </div>
-              <div class="social-links . d-md-flex align-items-center">
+              <div class="social-links d-none d-md-flex align-items-center">
                 <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
                 <a href="#" class="instagram">Our Global Offices (USA, UK, Australia, Singapore, India) </a>
