--- a/index-5.html
+++ b/index-5.html
@@ -30,6 +30,9 @@
 
     <!-- Responsive css -->
     <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="assets/css/slider.css">
+    
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
 
@@ -79,6 +82,46 @@
     </div>
 
 
+    <div class="sidebar-form">
+		
+      <div class="call-action">
+        <span>Quick contact</span>
+      </div>
+  
+      <h3>Quick Contact</h3>
+  
+      <form action="">
+          <div class="form-group">
+            <label for="">Full Name</label>
+            <input type="text" name="" id="" class="form-control">
+          </div>
+  
+          <div class="form-group">
+            <label for="">Email Address</label>
+            <input type="email" name="" id="" class="form-control">
+          </div>
+  
+          <div class="form-group">
+            <label for="">Phone No.</label>
+            <input type="text" name="" id="" class="form-control">
+          </div>
+  
+          <div class="form-group">
+            <label for="">Subject</label>
+            <input type="text" name="" id="" class="form-control">
+          </div>
+  
+          <input type="submit" value="Send Enquiry" id="submit-btn">
+      </form>
+  
+    </div>
+    <script>
+      $(document).ready(function(){
+  $(".sidebar-form .call-action").click(function(){
+  $(this).parents(".sidebar-form").toggleClass("show");
+  });
+  });
+    </script>
 
 <!-- Whatsapp sticky -->
 <div class="sticky-icons"> 
@@ -1727,7 +1770,8 @@ init();
                                         <li class="py-2"><a class="text-milk" href="#">Terms &amp; Conditions</a></li>
                                         <li class="py-2"><a class="text-milk" href="#">Privacy Policy</a></li>
                                         <li class="py-2"><a class="text-milk" href="#">Help Center</a></li>
-                                        <li class="py-2"><a class="text-milk" href="#">Contact Us</a></li>
+                                        <li class="py-2"><a class="text-milk call-action">Contact Us</a></li>
+
                                     </ul>
                                 </div>
                             </div>
