added all forms

--- a/index-5.html
+++ b/index-5.html
@@ -542,7 +542,7 @@ Partners and clients -->
 
             <!-- ***** Service Area End ***** -->
             <section id="service" class="section service-area dark-bg ptb_150" >
-                <div class="container wow fadeInUp" data-wow-duration="1.4s">
+                <div class=" wow fadeInUp" data-wow-duration="1.4s">
                     <div class="row justify-content-center">
                         <div class="col-12 col-md-10 col-lg-7">
                             <!-- Section Heading -->
