--- a/about.html
+++ b/about.html
@@ -696,7 +696,7 @@
         .awards { background-image: linear-gradient(90deg, #FF343F 0%, rgba(238, 19, 48, 0.795) 50%, #ff343ee8); padding: 60px 0px; text-align: center;}
         .awards img{width: 170px; filter: none; cursor: auto;}
     </style>
-    <section class="awards">
+  <section class="awards">
     <div class="container">
     <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -706,12 +706,12 @@
     </div>
     </div>
 
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_2-2.png"></div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_8.png"></div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_9.png"></div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_2-2.png"></div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_9.png"></div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_2-2.png"></div>
+    <div class="col-6 col-lg-2 col-md-6 col-sm-6 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_2-2.png"></div>
+    <div class="col-6 col-lg-2 col-md-6 col-sm-6 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_8.png"></div>
+    <div class="col-6 col-lg-2 col-md-6 col-sm-6 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_9.png"></div>
+    <div class="col-6 col-lg-2 col-md-6 col-sm-6 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_2-2.png"></div>
+    <div class="col-6 col-lg-2 col-md-6 col-sm-6 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_9.png"></div>
+    <div class="col-6 col-lg-2 col-md-6 col-sm-6 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_2-2.png"></div>
     </div>
     </div>
     </section>
