--- a/nft-market.html
+++ b/nft-market.html
@@ -822,24 +822,24 @@
         .awards img{width: 170px; filter: none; cursor: auto;}
     </style>
     <section class="awards">
-    <div class="container">
-    <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <div class="section-title center">
-    <h2 class="title" style="color:#fff;"><strong> Award and Recognitions</strong></h2>
-    <hr style="background: #fff !important; height: 2px; width: 90px; text-align: center; position: relative; margin: 0 auto 30px; border: 0;">
-    </div>
-    </div>
-
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_2-2.png"></div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_8.png"></div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_9.png"></div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_2-2.png"></div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_9.png"></div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_2-2.png"></div>
-    </div>
-    </div>
-    </section>
+        <div class="container">
+        <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="section-title center">
+        <h2 class="title" style="color:#fff;"><strong> Award and Recognitions</strong></h2>
+        <hr style="background: #fff !important; height: 2px; width: 90px; text-align: center; position: relative; margin: 0 auto 30px; border: 0;">
+        </div>
+        </div>
+    
+        <div class="col-6 col-lg-2 col-md-6 col-sm-6 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_2-2.png"></div>
+        <div class="col-6 col-lg-2 col-md-6 col-sm-6 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_8.png"></div>
+        <div class="col-6 col-lg-2 col-md-6 col-sm-6 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_9.png"></div>
+        <div class="col-6 col-lg-2 col-md-6 col-sm-6 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_2-2.png"></div>
+        <div class="col-6 col-lg-2 col-md-6 col-sm-6 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_9.png"></div>
+        <div class="col-6 col-lg-2 col-md-6 col-sm-6 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_2-2.png"></div>
+        </div>
+        </div>
+        </section>
     <!-- award end -->
 
 
