--- a/community.html
+++ b/community.html
@@ -473,7 +473,7 @@
                                 <!-- Blog Title -->
                                 <h3 class="blog-title my-3"><a href="https://www.reddit.com/r/ethereum/" style="color: #212428;">Reddit</a></h3>
                                 <p> Buster Solutions ad Reddit go long back in history. We are not just  Business Partners but also a back-end team of developers taking care of Reddit. Reddit is mainly a content-sharing website, and as a registered user, you have access to the site's various posting options, including the ability to upload videos, blockchain, and links. Users can then up-vote or down-vote these posts as they see fit. Active users are 54 Million. Have a Look at Reddit. </p>
-                                <a href="https://www.reddit.com/r/ethereum/" class="btn blog-btn mt-3  btn-bordered-white active" style="background-color: #ff343ee8;">Join Now</a>
+                                <a id="btnOpenForm5" class="btn blog-btn mt-3  btn-bordered-white active" style="background-color: #ff343ee8;">Join Now</a>
                             </div>
                         </div>
                     </div>
@@ -494,7 +494,7 @@
                                 <!-- Blog Title -->
                                 <h3 class="blog-title my-3"><a  style="color: #212428;" href=" https://www.unlock-bc.com">Unlock Blockchain</a></h3>
                                 <p>Unlock Blockchain and Buster Solutions have been together for the last 3 years. If you want to dive deep into the sea of NFTs and Blockchain, then do not forget Unlock Blockchain; as the name suggests, it gives detailed information on NFTs. They have a forum where multiple high-profile Asians exchange blockchain statistics and show the field's future scope. Have a Look at Unlock Blockchain </p>
-                                <a href=" https://www.unlock-bc.com" class="btn blog-btn mt-3  btn-bordered-white active" style="background-color: #ff343ee8;">Join Now</a>
+                                <a id="btnOpenForm4" class="btn blog-btn mt-3  btn-bordered-white active" style="background-color: #ff343ee8;">Join Now</a>
                                   </div>
                         </div>
                     </div>
@@ -516,7 +516,7 @@
                                 <!-- Blog Title -->
                                 <h3 class="blog-title my-3"><a href="https://rotterdamblockchain.com" style="color: #212428;">Rotterdam</a></h3>
                                 <p>Rotterdam is the newest member and partner of Buster Solutions. Rotterdam Community assists you in making a secure transaction and bringing a slight change to your financial service that Buster Solution recommends; the Rotterdam blockchain community is ideal for you. Have a Look at Rotterdamhere  </p>
-                                <a href="https://rotterdamblockchain.com"  class="btn blog-btn mt-3  btn-bordered-white active" style="background-color: #ff343ee8;">Join Now</a>
+                                <a id="btnOpenForm3"  class="btn blog-btn mt-3  btn-bordered-white active" style="background-color: #ff343ee8;">Join Now</a>
                             </div>
                         </div>
                     </div>
@@ -537,7 +537,7 @@
                                 <!-- Blog Title -->
                                 <h3 class="blog-title my-3"><a  style="color: #212428;" href="https://blockchainvan.com/forum" >Blockchain Van</a></h3>
                                 <p>So, digging deep down is tBlockchaininva.’. As it is a forum site, you need to join the forum first for you to kick off your work. The best thing about it is that it covers all the aspects of Blockchain, even for newbies who require learning from the basics, like understanding how the NFTs work, to more complex issues like blockchains. Have a Look at Blockchainvan </p>
-                                <a href="https://blockchainvan.com/forum" class="btn blog-btn mt-3  btn-bordered-white active" style="background-color: #ff343ee8;">Join Now</a>
+                                <a id="btnOpenForm2"class="btn blog-btn mt-3  btn-bordered-white active" style="background-color: #ff343ee8;">Join Now</a>
                                   </div>
                         </div>
                     </div>
@@ -1033,6 +1033,137 @@ init();
 // 		scrollTop: position
 // 	} /* speed */ );
 // });
+
+
+
+
+$(document).ready(function($) {
+
+/* Contact Form Interactions */
+$('#btnOpenForm2').on('click', function(event) {
+event.preventDefault();
+
+$('.form-popup-bg').addClass('is-visible');
+});
+
+//close popup when clicking x or off popup
+$('.form-popup-bg').on('click', function(event) {
+if ($(event.target).is('.form-popup-bg') || $(event.target).is('#btnCloseForm2')) {
+event.preventDefault();
+$(this).removeClass('is-visible');
+}
+});
+
+
+
+});
+
+$(document).ready(function($) {
+
+/* Contact Form Interactions */
+$('#btnOpenForm3').on('click', function(event) {
+event.preventDefault();
+
+$('.form-popup-bg').addClass('is-visible');
+});
+
+//close popup when clicking x or off popup
+$('.form-popup-bg').on('click', function(event) {
+if ($(event.target).is('.form-popup-bg') || $(event.target).is('#btnCloseForm3')) {
+event.preventDefault();
+$(this).removeClass('is-visible');
+}
+});
+
+
+
+});
+
+
+
+$(document).ready(function($) {
+
+/* Contact Form Interactions */
+$('#btnOpenForm4').on('click', function(event) {
+event.preventDefault();
+
+$('.form-popup-bg').addClass('is-visible');
+});
+
+//close popup when clicking x or off popup
+$('.form-popup-bg').on('click', function(event) {
+if ($(event.target).is('.form-popup-bg') || $(event.target).is('#btnCloseForm4')) {
+event.preventDefault();
+$(this).removeClass('is-visible');
+}
+});
+
+
+
+});
+
+$(document).ready(function($) {
+
+/* Contact Form Interactions */
+$('#btnOpenForm5').on('click', function(event) {
+event.preventDefault();
+
+$('.form-popup-bg').addClass('is-visible');
+});
+
+//close popup when clicking x or off popup
+$('.form-popup-bg').on('click', function(event) {
+if ($(event.target).is('.form-popup-bg') || $(event.target).is('#btnCloseForm5')) {
+event.preventDefault();
+$(this).removeClass('is-visible');
+}
+});
+
+
+
+});
+
+$(document).ready(function($) {
+
+/* Contact Form Interactions */
+$('#btnOpenForm6').on('click', function(event) {
+event.preventDefault();
+
+$('.form-popup-bg').addClass('is-visible');
+});
+
+//close popup when clicking x or off popup
+$('.form-popup-bg').on('click', function(event) {
+if ($(event.target).is('.form-popup-bg') || $(event.target).is('#btnCloseForm6')) {
+event.preventDefault();
+$(this).removeClass('is-visible');
+}
+});
+
+
+
+});
+
+$(document).ready(function($) {
+
+/* Contact Form Interactions */
+$('#btnOpenForm7').on('click', function(event) {
+event.preventDefault();
+
+$('.form-popup-bg').addClass('is-visible');
+});
+
+//close popup when clicking x or off popup
+$('.form-popup-bg').on('click', function(event) {
+if ($(event.target).is('.form-popup-bg') || $(event.target).is('#btnCloseForm7')) {
+event.preventDefault();
+$(this).removeClass('is-visible');
+}
+});
+
+
+
+});
 
     </Script>
 
