--- a/index-5.html
+++ b/index-5.html
@@ -420,15 +420,15 @@
         <!-- ***** Header End ***** -->
        
         <!-- ***** Welcome Area Start ***** -->
-        <section id="home" class="section welcome-area ptb_100 overflow-hidden d-flex align-items-center" style="height:
-        800px;">
+        <section id="home" class="section  welcome-area ptb_100 overflow-hidden d-flex align-items-center" style="height:
+        600px; ">
             <div class="container">
                 <div class="row align-items-center">
                     <!-- Welcome Intro Start -->
                     <div class="col-12 col-md-7 wow fadeInUp" data-wow-duration="1.9s">
                         <div class="welcome-intro">
                             <h1 class="text-white"><span class="fw-4">Introducing The World to</span> Web 3.0</h1>
-                            <p class="text-milk text my-4">We offer the best Blockchain development services from design to launch with 2 weeks. Experience first-hand professionalism.</p>
+                            <p class="text-milk text my-4">We offer the best Blockchain development services from design to launch within 2 weeks. Experience first-hand professionalism.</p>
                             <!-- Buttons -->
                             <div class="button-group">
                                 <a  href="https://api.whatsapp.com/send?l=en&amp;text=Hi!%20I%27m%20interested%20in%20one%20of%20your%20products%20at%20BUSTER%20SOLUTION&amp;phone=919815206209" target="_blank"  class="btn btn-bordered-white d-none active">Start a Project</a>
