--- a/index-5.html
+++ b/index-5.html
@@ -420,7 +420,7 @@
         <!-- ***** Header End ***** -->
        
         <!-- ***** Welcome Area Start ***** -->
-        <section id="home" class="section  welcome-area ptb_100 overflow-hidden d-flex align-items-center" style="height:
+        <section id="home" class="section mb-5 welcome-area ptb_100 overflow-hidden d-flex align-items-center" style="height:
         600px; ">
             <div class="container">
                 <div class="row align-items-center">
@@ -1951,7 +1951,9 @@ init();
           <li class="list-inline-item px-1"><a class="text-milk" href="#"><i class="fab fa-google-plus"></i></a></li>
           <li class="list-inline-item px-1"><a class="text-milk" href="#"><i class="fab fa-linkedin-in"></i></a></li>
           <li class="list-inline-item px-1"><a class="text-milk" href="#"><i class="fab fa-instagram"></i></a></li>
+
       </ul>
+      <img src="assets/img/welcome/review pic.png" alt="reviews">
   </div>
 </div>
                         </div>
