--- a/index-5.html
+++ b/index-5.html
@@ -541,7 +541,7 @@ Partners and clients -->
     <div class="main " >
 
             <!-- ***** Service Area End ***** -->
-            <section id="service" class="section service-area dark-bg ptb_150" >
+            <section id="service" class="container service-area dark-bg ptb_150" >
                 <div class=" wow fadeInUp" data-wow-duration="1.4s">
                     <div class="row justify-content-center">
                         <div class="col-12 col-md-10 col-lg-7">
