--- a/index-5.html
+++ b/index-5.html
@@ -297,8 +297,8 @@
 
 
                 </style>
-                <p  id="par " ><a target="_blank" href="https://api.whatsapp.com/send?l=en&amp;text=Hi!%20I%27m%20interested%20in%20one%20of%20your%20products%20at%20BUSTER%20SOLUTION&amp;phone=919815206209"><i class="bi bi-whatsapp" aria-hidden="true"></i>+91 9815 206 209</a>     <a id="mymail" href="mailto: Business@busterapps.com"><i  class="fa fa-envelope" aria-hidden="true"></i>      Business@busterapps.com   </a><a style="padding-left: 20px; ">
-                    <i   class="bi bi-geo-alt" aria-hidden="true"> </i> Our Global Offices : USA | Singapore | UK | Australia | India </a></p>
+                <p  id="par " ><a target="_blank" href="https://api.whatsapp.com/send?l=en&amp;text=Hi!%20I%27m%20interested%20in%20one%20of%20your%20products%20at%20BUSTER%20SOLUTION&amp;phone=919815206209"><i class="bi bi-whatsapp" aria-hidden="true"></i> +91 9815 206 209</a>     <a id="mymail" href="mailto: Business@busterapps.com"><i  class="fa fa-envelope" aria-hidden="true"></i>      Business@busterapps.com   </a><a style="padding-left: 20px; ">
+                    <i   class="bi bi-geo-alt" aria-hidden="true"> </i>Global Offices : USA | Singapore | UK | Australia | India </a></p>
     
                 </div>
             
@@ -1863,11 +1863,11 @@ init();
                                     <!-- Footer Title -->
                                     <h3 class="footer-title text-white text-uppercase mb-2">About Us</h3>
                                     <ul>
-                                        <li class="py-2"><a class="text-milk" href="about.html">About Us</a></li>
-                                        <li class="py-2"><a class="text-milk" href="portfolio.html">Portfolio,</a></li>
-                                        <li class="py-2"><a class="text-milk" href="community.html">Communities</a></li>
-                                        <li class="py-2"><a class="text-milk" href="clients.html">Partners</a></li>
-                                        <li class="py-2"><a class="text-milk" href="clients.html">Clients</a></li>
+                                        <li class="py-2"><a class="text-milk" href="about.html">About Us |</a></li>
+                                        <li class="py-2"><a class="text-milk" href="portfolio.html">Portfolio  |</a></li>
+                                        <li class="py-2"><a class="text-milk" href="community.html">Communities |</a></li>
+                                        <li class="py-2"><a class="text-milk" href="clients.html">Partners |</a></li>
+                                        <li class="py-2"><a class="text-milk" href="clients.html">Clients |</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -1877,12 +1877,12 @@ init();
                                     <!-- Footer Title -->
                                     <h3 class="footer-title text-white text-uppercase mb-2">Services</h3>
                                     <ul>
-                                        <li class="py-2"><a class="text-milk" href="portfolio.html">Crypto Exchange</a></li>
-                                        <li class="py-2"><a class="text-milk" href="portfolio.html">NFT Marketplacet</a></li>
-                                        <li class="py-2"><a class="text-milk" href="portfolio.html">Token</a></li>
-                                        <li class="py-2"><a class="text-milk" href="portfolio.html">Smart Contract</a></li>
-                                        <li class="py-2"><a class="text-milk" href="portfolio.html">CIO</a></li>
-                                        <li class="py-2"><a class="text-milk" href="portfolio.html">dApp</a></li>
+                                        <li class="py-2"><a class="text-milk" href="portfolio.html">Crypto Exchange  |</a></li>
+                                        <li class="py-2"><a class="text-milk" href="portfolio.html">NFT Marketplace  |</a></li>
+                                        <li class="py-2"><a class="text-milk" href="portfolio.html">Token |</a></li>
+                                        <li class="py-2"><a class="text-milk" href="portfolio.html">Smart Contract |</a></li>
+                                        <li class="py-2"><a class="text-milk" href="portfolio.html">CIO |</a></li>
+                                        <li class="py-2"><a class="text-milk" href="portfolio.html">dApp |</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -1892,11 +1892,11 @@ init();
                                     <!-- Footer Title -->
                                     <h3 class="footer-title text-white text-uppercase mb-2">Support</h3>
                                     <ul>
-                                        <li class="py-2"><a class="text-milk" href="#">Frequently Asked</a></li>
-                                        <li class="py-2"><a class="text-milk" href="#">Terms &amp; Conditions</a></li>
-                                        <li class="py-2"><a class="text-milk" href="#">Privacy Policy</a></li>
-                                        <li class="py-2"><a class="text-milk" href="#">Help Center</a></li>
-                                        <li class="py-2"><a class="text-milk " id="demo" >Contact Us</a></li>
+                                        <li class="py-2"><a class="text-milk" href="#">Frequently Asked |</a></li>
+                                        |<li class="py-2"><a class="text-milk" href="#">Terms &amp; Conditions |</a></li>
+                                        <li class="py-2"><a class="text-milk" href="#">Privacy Policy |</a></li>
+                                        <li class="py-2"><a class="text-milk" href="#">Help Center |</a></li>
+                                        <li class="py-2"><a class="text-milk " id="demo" >Contact Us |</a></li>
 
                                     </ul>
                                 </div>
