all changes done

--- a/index-5.html
+++ b/index-5.html
@@ -1893,7 +1893,7 @@ init();
                                     <h3 class="footer-title text-white text-uppercase mb-2">Support</h3>
                                     <ul>
                                         <li class="py-2"><a class="text-milk" href="#">Frequently Asked |</a></li>
-                                        |<li class="py-2"><a class="text-milk" href="#">Terms &amp; Conditions |</a></li>
+                                        <li class="py-2"><a class="text-milk" href="#">Terms &amp; Conditions |</a></li>
                                         <li class="py-2"><a class="text-milk" href="#">Privacy Policy |</a></li>
                                         <li class="py-2"><a class="text-milk" href="#">Help Center |</a></li>
                                         <li class="py-2"><a class="text-milk " id="demo" >Contact Us |</a></li>
