--- a/index-5.html
+++ b/index-5.html
@@ -298,7 +298,7 @@
 
                 </style>
                 <p  id="par " ><a target="_blank" href="https://api.whatsapp.com/send?l=en&amp;text=Hi!%20I%27m%20interested%20in%20one%20of%20your%20products%20at%20BUSTER%20SOLUTION&amp;phone=919815206209"><i class="bi bi-whatsapp" aria-hidden="true"></i> +91 9815 206 209</a>     <a id="mymail" href="mailto: Business@busterapps.com"><i  class="fa fa-envelope" aria-hidden="true"></i>      Business@busterapps.com   </a><a style="padding-left: 20px; ">
-                    <i   class="bi bi-geo-alt" aria-hidden="true"> </i>Global Offices : USA | Singapore | UK | Australia | India </a></p>
+                    Global Offices : USA | Singapore | UK | Australia | India </a></p>
     
                 </div>
             
@@ -1892,7 +1892,7 @@ init();
                                     <!-- Footer Title -->
                                     <h3 class="footer-title text-white text-uppercase mb-2">Support</h3>
                                     <ul>
-                                        <li class="py-2"><a class="text-milk" href="#">Frequently Asked |</a></li>
+                                        <li class="py-2"><a class="text-milk" href="#">Frequently Asked Questions |</a></li>
                                         <li class="py-2"><a class="text-milk" href="#">Terms &amp; Conditions |</a></li>
                                         <li class="py-2"><a class="text-milk" href="#">Privacy Policy |</a></li>
                                         <li class="py-2"><a class="text-milk" href="#">Help Center |</a></li>
