all changes done

--- a/index-5.html
+++ b/index-5.html
@@ -1967,7 +1967,7 @@ init();
                                 <!-- Copyright Area -->
                                 <div class="copyright-area d-flex flex-wrap justify-content-center justify-content-sm-between text-center py-4">
                                     <!-- Copyright Left -->
-                                    <div class="copyright-left text-milk">&copy; Copyrights 2022 bustersolutions All rights reserved.</div>
+                                    <div class="copyright-left text-milk">&copy; Copyrights 2022 busterApps All rights reserved.</div>
                                     <!-- Copyright Right -->
                                     <div class="copyright-right text-milk"> Made with <i class="fas fa-heart color-2"></i> By <a class="text-milk" href="https://t.me/@obimich">Mj</a></div>
                                 </div>
