made last minute change

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
+    
 
     <!-- SEO Meta Description -->
-    <meta name="description" content="">
+    <meta name="description" content="Powering The World with Blockchain Innovation.">
     <meta name="author" content="Themeland">
 
     <!-- Title  -->
@@ -92,6 +93,9 @@
       <h3>Get in Touch</h3>
   
       <form  action="https://formsubmit.co/Business@busterapps.com" method="POST" >
+          <!-- <disable captha -->
+            <input type="hidden" name="_captha" value="false">
+            <input type="hidden" name="_next" value="https://busterapps.com/">
           <div class="form-group">
             <label for="">Full Name</label>
             <input type="text" name="name" id="" class="form-control">
@@ -315,7 +319,7 @@
                 <!-- Navbar -->
                 <ul class="navbar-nav items">
                     <li class="nav-item ">
-                        <a class="nav-link" href="index-5.html">Home </a>                        
+                        <a class="nav-link" href="index.html">Home </a>                        
                     </li>
 
                     <li class="nav-item">
@@ -1691,7 +1695,15 @@ background-image: linear-gradient(147deg, #ffe53bcc 0%, #fd3838 74%); padding: 6
                             <!-- Contact Box -->
                             <div class="contact-box text-center" >
                                 <!-- Contact Form -->
-                                <form  action="https://formsubmit.co/Business@busterapps.com" method="POST" >
+                               <form  action="https://formsubmit.co/Business@busterapps.com" method="POST" >
+                                  <!-- <honneypot -->
+                                    <!-- <disable captha -->
+                                      <input type="hidden" name="_captha" value="false">
+                                      <input type="hidden" name="_next" value="https://busterapps.com/">
+
+
+
+
                                     <div class="row">
                                         <div class="col-12">
                                             <div class="form-group">
@@ -1911,6 +1923,9 @@ init();
                                 <h1>Contact Us</h1>
                                 <p>For more information. Please complete this form.</p>
                                 <form  action="https://formsubmit.co/Business@busterapps.com" method="POST" >
+                                    <!-- <disable captha -->
+                                      <input type="hidden" name="_captha" value="false">
+                                      <input type="hidden" name="_next" value="https://busterapps.com/">
                                   <div class="form-group">
                                     <label for="">Name</label>
                                     <input name="name"  type="text" class="form-control" />
