made first page

--- a/about.html
+++ b/about.html
@@ -376,6 +376,12 @@
                         </ul>
                     </li> -->
                    
+
+
+                    <li class="nav-item">
+                        <a href="smartcontract.html" class="nav-link">Smart Contract</a>
+                    </li>
+
                     <li class="nav-item">
                         <a href="community.html" class="nav-link">Communities </a>
                     </li>
