started the almight exchnagepage

--- a/cryptoexchange.html
+++ b/cryptoexchange.html
@@ -452,10 +452,10 @@
             <div class="container">
               <div class="row flex-lg-row-reverse align-items-center g-4">
                 <div class="col-lg-6 crypto-exchange-styling mt-5 text-center">
-                  <div class="row row-cols-2 row-cols-lg-3 g-4 cryptoexchange-clone-top py-4">
+                  <div class="row row-cols-2 row-cols-lg-3 g-4 cryptoexchange-clone-top py-4" >
                     <div class="col">
                       <div class="cryptoexchange-clone" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        <div class="content">
+                        <div class="content" >
                           <img class="cryptoexchange-clone-avatar-1"
                             src="https://clarisco.s3.ap-south-1.amazonaws.com/clarisco+images/exchange/Cryptocurrency-Exchange/binance-02.png"
                             alt="Binance-clone-script" />
@@ -469,7 +469,8 @@
                           <img class="cryptoexchange-clone-avatar-2"
                             src="https://clarisco.s3.ap-south-1.amazonaws.com/clarisco+images/exchange/Cryptocurrency-Exchange/wazirx-02.png"
                             alt="Binance-clone-script" />
-                          <h2 class='fs-16'>Wazirx <br />clone script</h2>
+                       
+                          <h2 class='fs-16' >Wazirx <br />clone script</h2>
                         </div>
                       </div>
                     </div>
@@ -518,18 +519,16 @@
                     A Free Demo</a>
                 </div>
                 <div class="col-lg-6">
-                  <a href="/contact" class="fw-bold  d-flex align-self-center"> <i class="fa fa-btc me-2"
-                      style="font-size:24px"></i> Jump start for free consulting <i
-                      class="ms-3 fc-b fa fa-long-arrow-right" style="font-size:24px"></i></a>
-                  <h1 class="display-5 fw-bold lh-1 my-3"><span class="fc-b">Cryptocurrency Exchange </span> Development
-                    Company</h1>
+           
+                  <h2 class="display-5 fw-bold lh-1 my-3"> <span class="fc-b  " style="font-weight: bolder;">Cryptocurrency Exchange </span> Development
+                    Company</h2>
                   <p class="">Get in on the action with our groundbreaking White-Label Crypto Exchange
                     Software Solutions. Buying,
                     selling, and exchanging cryptocurrencies has never been this easy. Explore the fascinating world of
                     cryptos today!.</p>
   
-                  <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                    <a href="/contact" class="btn btn-primary btn-lg px-4 me-md-2">Get Started</a>
+                  <div class="d-grid gap-2 d-md-flex justify-content-md-start my-3 ">
+                    <a  id="btnOpenForm1"class="btn btn-primary btn-lg px-4 me-md-2">Get Started</a>
                   </div>
                 </div>
               </div>
