--- a/smartcontract.html
+++ b/smartcontract.html
@@ -458,7 +458,7 @@
                     to replace conventional contracts by incorporating them into executable codes.
                     With the immense expertise of our blockchain developers, we strive to deliver
                     futuristic solutions that will transform your business for the better.</p>
-                  <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                  <div class="d-grid gap-2 d-md-flex justify-content-md-start my-3">
                     <a id="btnOpenForm1" class="btn btn-primary btn-lg px-4 me-md-2">Get Started</a>
                   </div>
                 </div>
