--- a/smartcontract.html
+++ b/smartcontract.html
@@ -446,12 +446,12 @@
               <div class="row flex-lg-row-reverse align-items-center g-4">
                 <div class="col-lg-6">
                   <img 
-                  src="https://clarisco.s3.ap-south-1.amazonaws.com/clarisco+images/blockchain/services/smart-contract-development/smart-contract-development.webp"
+                  src="assets/img/welcome/smart1.jpeg"
                   alt="smart-contract-development-company" />
                 </div>
                 <div class="col-lg-6">
                  
-                  <h2 class="display-5 fw-bold lh-1 my-3"> <span class="fc-b" style="color: #fd3838;" >Smart Contract Development </span> Company
+                  <h2 class="display-5 fw-bold lh-1 my-3"> <span class="fc-b" style="color: #fd3838; font-size: 2rem;" >Smart Contract Development </span> Company
                   </h2>
                   <p class="">We are a prominent Smart Contract Development Company
                     that provides leading-edge Smart contract development services
@@ -470,7 +470,7 @@
               <div class="row align-items-center g-4">
                 <div class="col-lg-6">
                   <img
-                    src="https://clarisco.s3.ap-south-1.amazonaws.com/clarisco+images/blockchain/services/smart-contract-development/smart-contract-development.webp"
+                    src="assets/img/welcome/smart2.jpeg"
                     alt="smart-contract-development" />
                 </div>
                 <div class="col-lg-6">
@@ -1255,7 +1255,7 @@
                 <!-- Section Heading -->
                 <div class="section-heading text-center m-0">
                     <h2 class="text-white">Looking for the best Blockchain agency &amp; Web 3.0 Project solution?</h2>
-                   <a target="_blank" href="https://api.whatsapp.com/send?l=en&amp;text=Hi!%20I%27m%20interested%20in%20one%20of%20your%20products%20at%20BUSTER%20SOLUTION&amp;phone=919815206209"class="btn btn-bordered-white mt-4">Connect on Whatsapp</a> or <a target="_blank" id="btnOpenForm1" class="btn btn-bordered-white mt-4">Chat Now</a>
+                   <a target="_blank" href="https://api.whatsapp.com/send?l=en&amp;text=Hi!%20I%27m%20interested%20in%20one%20of%20your%20products%20at%20BUSTER%20SOLUTION&amp;phone=919815206209"class="btn btn-bordered-white mt-4">Connect on Whatsapp</a> or <a target="_blank" id="btnOpenForm2" class="btn btn-bordered-white mt-4">Chat Now</a>
                 </div>
             </div>
         </div>
