did exchange page

--- a/cryptoexchange.html
+++ b/cryptoexchange.html
@@ -456,75 +456,13 @@
             <div class="container">
               <div class="row flex-lg-row-reverse align-items-center g-4">
                 <div class="col-lg-6 crypto-exchange-styling mt-5 text-center">
-                  <div class="row row-cols-2 row-cols-lg-3 g-4 cryptoexchange-clone-top py-4" >
-                    <div class="col">
-                      <div class="cryptoexchange-clone" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        <div class="content" >
-                          <img class="cryptoexchange-clone-avatar-1"
-                            src="https://clarisco.s3.ap-south-1.amazonaws.com/clarisco+images/exchange/Cryptocurrency-Exchange/binance-02.png"
-                            alt="Binance-clone-script" />
-                          <h2 class='fs-16'>Binance <br />clone script</h2>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="cryptoexchange-clone" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        <div class="content">
-                          <img class="cryptoexchange-clone-avatar-2"
-                            src="https://clarisco.s3.ap-south-1.amazonaws.com/clarisco+images/exchange/Cryptocurrency-Exchange/wazirx-02.png"
-                            alt="Binance-clone-script" />
-                       
-                          <h2 class='fs-16' >Wazirx <br />clone script</h2>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="cryptoexchange-clone" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        <div class="content">
-                          <img class="cryptoexchange-clone-avatar-3"
-                            src="https://clarisco.s3.ap-south-1.amazonaws.com/clarisco+images/exchange/Cryptocurrency-Exchange/paxful-02.png"
-                            alt="Binance-clone-script" />
-                          <h2 class='fs-16'>Paxful <br />clone script</h2>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="cryptoexchange-clone" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        <div class="content">
-                          <img class="cryptoexchange-clone-avatar-4"
-                            src="https://clarisco.s3.ap-south-1.amazonaws.com/clarisco+images/exchange/Cryptocurrency-Exchange/remitano-02.png"
-                            alt="Binance-clone-script" />
-                          <h2 class='fs-16'>Remitano <br />clone script</h2>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="cryptoexchange-clone" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        <div class="content">
-                          <img class="cryptoexchange-clone-avatar-5"
-                            src="https://clarisco.s3.ap-south-1.amazonaws.com/clarisco+images/exchange/Cryptocurrency-Exchange/local-bitcoins-02.png"
-                            alt="Binance-clone-script" />
-                          <h2 class='fs-16'>Localbitcoins <br />clone script</h2>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="cryptoexchange-clone" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        <div class="content">
-                          <img class="cryptoexchange-clone-avatar-6"
-                            src="https://clarisco.s3.ap-south-1.amazonaws.com/clarisco+images/exchange/Cryptocurrency-Exchange/coinbase-02.png"
-                            alt="Binance-clone-script" />
-                          <h2 class='fs-16'>Coinbase <br />clone script</h2>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <a href="#" class="btn colored-button-header" data-bs-toggle="modal" data-bs-target="#exampleModal">Get
+                  <img src="assets/img/welcome/crypexchange.jpg">
+                  <a   id="btnOpenForm91"class=" mt-2 mb-2 btn colored-button-header" >Get
                     A Free Demo</a>
                 </div>
                 <div class="col-lg-6">
            
-                  <h2 class="display-5 fw-bold lh-1 my-3"> <span class="fc-b  " style="font-weight: bolder;">Cryptocurrency Exchange </span> Development
+                  <h2 class="display-5 fw-bold lh-1 my-3"> <span class="fc-b  " style="font-weight: bolder; font-size: 2.7rem;">Cryptocurrency Exchange </span> Development
                     Company</h2>
                   <p class="">Get in on the action with our groundbreaking White-Label Crypto Exchange
                     Software Solutions. Buying,
@@ -544,7 +482,7 @@
               <div class="row align-items-center g-4">
                 <div class="col-lg-6">
                   <img
-                    src="https://clarisco.s3.ap-south-1.amazonaws.com/clarisco+images/cryptocurrency/crypto-payment-development/change-image-2.webp"
+                    src="assets/img/welcome/etther.webp"
                     alt="BestCryptocurrencyExchangeDevelopmentcompany1" />
                 </div>
                 <div class="col-lg-6">
@@ -765,7 +703,7 @@
                 <div class="col-lg-12 w-75">
                   <h3 class="mb-4 mt-4" style="color: #212529;">Venture into the diverse world of cryptos with our revolutionary White-Label Crypto
                     Exchange Software Solutions today!</h3>
-                  <a  id="btnOpenForm2" class="btn btn-outline-primary mb-4">Get Started</a>
+                  <a  id="btnOpenForm92" class="btn btn-outline-primary mb-4">Get Started</a>
                 </div>
               </div>
             </div>
@@ -1517,7 +1455,7 @@
                 <!-- Section Heading -->
                 <div class="section-heading text-center m-0">
                     <h2 class="text-white">Looking for the best Blockchain agency &amp; Web 3.0 Project solution?</h2>
-                   <a target="_blank" href="https://api.whatsapp.com/send?l=en&amp;text=Hi!%20I%27m%20interested%20in%20one%20of%20your%20products%20at%20BUSTER%20SOLUTION&amp;phone=919815206209"class="btn btn-bordered-white mt-4">Connect on Whatsapp</a> or <a target="_blank" id="btnOpenForm1" class="btn btn-bordered-white mt-4">Chat Now</a>
+                   <a target="_blank" href="https://api.whatsapp.com/send?l=en&amp;text=Hi!%20I%27m%20interested%20in%20one%20of%20your%20products%20at%20BUSTER%20SOLUTION&amp;phone=919815206209"class="btn btn-bordered-white mt-4">Connect on Whatsapp</a> or <a target="_blank" id="btnOpenForm93" class="btn btn-bordered-white mt-4">Chat Now</a>
                 </div>
             </div>
         </div>
@@ -2049,6 +1987,81 @@ $(this).removeClass('is-visible');
 
 
 });
+
+
+$(document).ready(function($) {
+
+/* Contact Form Interactions */
+$('#btnOpenForm91').on('click', function(event) {
+event.preventDefault();
+
+$('.form-popup-bg').addClass('is-visible');
+});
+
+//close popup when clicking x or off popup
+$('.form-popup-bg').on('click', function(event) {
+if ($(event.target).is('.form-popup-bg') || $(event.target).is('#btnCloseForm91')) {
+event.preventDefault();
+$(this).removeClass('is-visible');
+}
+});
+
+
+
+});
+
+
+
+
+
+
+$(document).ready(function($) {
+
+/* Contact Form Interactions */
+$('#btnOpenForm92').on('click', function(event) {
+event.preventDefault();
+
+$('.form-popup-bg').addClass('is-visible');
+});
+
+//close popup when clicking x or off popup
+$('.form-popup-bg').on('click', function(event) {
+if ($(event.target).is('.form-popup-bg') || $(event.target).is('#btnCloseForm92')) {
+event.preventDefault();
+$(this).removeClass('is-visible');
+}
+});
+
+
+
+});
+
+
+
+
+
+
+$(document).ready(function($) {
+
+/* Contact Form Interactions */
+$('#btnOpenForm93').on('click', function(event) {
+event.preventDefault();
+
+$('.form-popup-bg').addClass('is-visible');
+});
+
+//close popup when clicking x or off popup
+$('.form-popup-bg').on('click', function(event) {
+if ($(event.target).is('.form-popup-bg') || $(event.target).is('#btnCloseForm93')) {
+event.preventDefault();
+$(this).removeClass('is-visible');
+}
+});
+
+
+
+});
+
 
 </script>
 
