--- a/cryptoexchange.html
+++ b/cryptoexchange.html
@@ -34,7 +34,7 @@
     <!-- Responsive css -->
     <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="stylesheet" href="assets/css/slider.css">
-    
+    <link rel="stylesheet" href="assets/css/style3.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
