--- a/dapps.html
+++ b/dapps.html
@@ -28,6 +28,7 @@
   
   <link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js"></script>
+  <link rel="stylesheet" href="assets/css/style3.css">
 
     <!-- Responsive css -->
     <link rel="stylesheet" href="assets/css/responsive.css">
