--- a/index.html
+++ b/index.html
@@ -1122,68 +1122,144 @@ font-family: 'Fira Sans', sans-serif;
                  </div>
                     <div class="row">
                       
-                      <div class="col col-sm  col-lg-2 mb-2" >
+                      <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
                         <div class="feature-box-5 " style="border-radius: 5px;" >
-                          <div class="icon">  <img src="assets/img/welcome/ethereum.jpg"></div>
+                          <div class="icon">  <img src="assets/img/welcome/icon-ethereum.webp"></div>
                           <h4>Ethereum</h4> </li>
   
                         </div>
                       </div>
-                      <div class="col col-sm  col-lg-2 mb-2" >
+                      <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
                         <div class="feature-box-5 " style="border-radius: 5px;" >
-                          <div class="icon">  <img src="assets/img/welcome/cardano.jpg"></div>
+                          <div class="icon">  <img src="assets/img/welcome/logo-cardano.webp"></div>
                           <h4>Cardano</h4> </li>
   
                         </div>
                       </div>
-                      <div class="col col-sm  col-lg-2 mb-2" >
+                      <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
                         <div class="feature-box-5 " style="border-radius: 5px;" >
-                          <div class="icon">  <img src="assets/img/welcome/tezos.jpg"></div>
+                          <div class="icon">  <img src="assets/img/welcome/logo-Tezos-1.webp"></div>
                           <h4>Tezos</h4> </li>
   
                         </div>
                       </div>
-                      <div class="col col-sm  col-lg-2 mb-2" >
+                      <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
+                        <div class="feature-box-5 " style="border-radius: 5px;" >
+                          <div class="icon">  <img src="assets/img/welcome/angular.jpg"></div>
+                          <h4>Angular</h4> </li>
+  
+                        </div>
+                      </div>
+                      <!-- <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
                         <div class="feature-box-5 " style="border-radius: 5px;" >
                           <div class="icon">  <img src="assets/img/welcome/flow.jpg"></div>
                           <h4>Flow</h4> </li>
   
                         </div>
-                      </div>
-                      <div class="col col-sm  col-lg-2 mb-2" >
+                      </div> -->
+                      <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
                         <div class="feature-box-5 " style="border-radius: 5px;" >
-                          <div class="icon">  <img src="assets/img/welcome/binance.jpg"></div>
+                          <div class="icon">  <img src="assets/img/welcome/logo-Binance-SmartChain.webp"></div>
                           <h4>Binance</h4> </li>
   
                         </div>
                       </div>
-                      <div class="col col-sm  col-lg-2 mb-2" >
+                      <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
                         <div class="feature-box-5 " style="border-radius: 5px;" >
-                          <div class="icon">  <img src="assets/img/welcome/polkadot.jpg"></div>
+                          <div class="icon">  <img src="assets/img/welcome/logo-polkadot.webp"></div>
                           <h4>Polkadot</h4> </li>
   
                         </div>
                       </div>
-                      <div class="col col-sm  col-lg-2 mb-2" >
+                      <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
                         <div class="feature-box-5 " style="border-radius: 5px;" >
-                          <div class="icon">  <img src="assets/img/welcome/polygon.jpg"></div>
+                          <div class="icon">  <img src="assets/img/welcome/logo-polygon.webp"></div>
                           <h4>Polygon</h4> </li>
   
                         </div>
                       </div>
-                      <div class="col col-sm  col-lg-2 mb-2" >
+                      <!-- <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
                         <div class="feature-box-5 " style="border-radius: 5px;" >
                           <div class="icon">  <img src="assets/img/welcome/angular.jpg"></div>
                           <h4>
                             Angular</h4> </li>
   
                         </div>
-                      </div>
+                      </div> -->
                       
-                      <div class="col  col-sm  col-lg-2 mb-2">
+                      <!-- <div class="col  col-sm  col-lg-2 mb-2">
                         <div class="feature-box-5 " style="border-radius: 5px;">
                           <div class="icon">  <img src="assets/img/welcome/eos.jpg"></div>
                           <h4>Eos..more</h4> </li>
+  
+                        </div>
+                      </div> -->
+
+                      <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
+                        <div class="feature-box-5 " style="border-radius: 5px;" >
+                          <div class="icon">  <img src="assets/img/welcome/solana.webp"></div>
+                          <h4>Solana</h4> </li>
+  
+                        </div>
+                      </div>
+
+
+                      <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
+                        <div class="feature-box-5 " style="border-radius: 5px;" >
+                          <div class="icon">  <img src="assets/img/welcome/logo-Harmony.webp"></div>
+                          <h4>Harmony</h4> </li>
+  
+                        </div>
+                      </div>
+
+                      <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
+                        <div class="feature-box-5 " style="border-radius: 5px;" >
+                          <div class="icon">  <img src="assets/img/welcome/Hyperledger-Fabric.webp"></div>
+                          <h4>Hyperledger Fabric</h4> </li>
+  
+                        </div>
+                      </div>
+                      <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
+                        <div class="feature-box-5 " style="border-radius: 5px;" >
+                          <div class="icon">  <img src="assets/img/welcome/logo-TRON.webp"></div>
+                          <h4>Tron</h4> </li>
+  
+                        </div>
+                      </div>
+                      <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
+                        <div class="feature-box-5 " style="border-radius: 5px;" >
+                          <div class="icon">  <img src="assets/img/welcome/logo-Avalanche.webp"></div>
+                          <h4>Avalanche</h4> </li>
+  
+                        </div>
+                      </div>
+
+                      <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
+                        <div class="feature-box-5 " style="border-radius: 5px;" >
+                          <div class="icon">  <img src="assets/img/welcome/icon-corda.webp"></div>
+                          <h4>Corda</h4> </li>
+  
+                        </div>
+                      </div>
+
+                      <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
+                        <div class="feature-box-5 " style="border-radius: 5px;" >
+                          <div class="icon">  <img src="assets/img/welcome/logo-Klaytn.webp"></div>
+                          <h4>Klaytn</h4> </li>
+  
+                        </div>
+                      </div>
+                      <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
+                        <div class="feature-box-5 " style="border-radius: 5px;" >
+                          <div class="icon">  <img src="assets/img/welcome/cosmos.webp"></div>
+                          <h4>Cosmos</h4> </li>
+  
+                        </div>
+                      </div>
+                      <div class="col-6 .col-xs-6 col-sm  col-lg-2 mb-2" >
+                        <div class="feature-box-5 " style="border-radius: 5px;" >
+                          <div class="icon">  <img src="assets/img/welcome/icon-hyperledger.webp"></div>
+                          <h4>Hyperledger</h4> </li>
   
                         </div>
                       </div>
