done tech stack

--- a/index.html
+++ b/index.html
@@ -601,10 +601,10 @@ Partners and clients -->
 
 
                     
-                    <div class="row">
+                    <div class="row pro">
                         <div class="col-12 col-md-6 col-lg-4">
                             <!-- Single Service -->
-                            <div class="single-service media p-3">
+                            <div class="single-service media  p-3" >
                                
                                 <!-- Service Text -->
                                 <div class="media-body ml-4">
